# opencv_cpp_learn

./: .clangd  1.cpp  2.cpp  CMakeLists.txt  README.md  quickopencv.h
chapter_1/: 2.cpp  3.cpp  CMakeLists.txt  main.cpp
chapter_2/: CMakeLists.txt  main.cpp
chapter_3/: CMakeLists.txt  main.cpp
chapter_4/: CMakeLists.txt  main.cpp
chapter_5/: CMakeLists.txt  main.cpp
chapter_6/: CMakeLists.txt  main.cpp
chapter_7/: CMakeLists.txt  main.cpp
chapter_8/: CMakeLists.txt  main.cpp
opencv_cuda_1/: CMakeLists.txt  main.cpp
project_1/: CMakeLists.txt  main.cpp
